# OrcaLogy

./: .gitignore  CLAUDE - OrcaLogy.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
context/: Implementation Flow - OrcaLogy.md  Product Discovery Document - OrcaLogy.md  Quick Start - OrcaLogy.md  Software Design Document - OrcaLogy.md  Solution Architecture Document - OrcaLogy.md
context/backlog/: TSK-01.md  TSK-02.md  TSK-03.md  TSK-04.md  TSK-05.md  TSK-06.md  TSK-07.md  TSK-08.md  TSK-09.md  TSK-10.md  TSK-11.md  TSK-12.md  TSK-13.md  TSK-14.md  TSK-15.md  TSK-16.md  TSK-17.md  TSK-18.md  TSK-19.md  TSK-20.md  TSK-21.md  TSK-22.md  TSK-23.md  TSK-24.md  TSK-25.md  TSK-26.md  TSK-27.md  TSK-28.md  TSK-29.md  TSK-30.md  TSK-31.md  TSK-32.md  TSK-33.md  TSK-34.md  TSK-35.md  TSK-36.md  TSK-37.md  TSK-38.md  TSK-39.md  TSK-40.md  (+13 more)
orcalogy/: __init__.py  bootstrap.py  main.py
orcalogy/app/: __init__.py  services.py
orcalogy/cli/: __init__.py  commands.py
orcalogy/domain/: __init__.py  errors.py  models.py  ports.py  ranking.py  validation.py
orcalogy/infra/: __init__.py  file_repo.py  locker.py  parser.py
orcalogy/tui/: __init__.py  app.py  screens.py
tests/: conftest.py  test_app.py  test_cli.py  test_domain.py  test_infra.py  test_ports.py  test_tui.py
